test/fail/actioncalls.app.disabled
application test

section pages

define ajax templ() {

}

define page root() {

	form{ container[onclick:=do2(3)]{ "do"} }
	
	action do2(i : Int) {
	
	}
  

	var z := x()

	 action x()  {
		return 3;
	} 

}



define ajax templ(s: String) {
  "hoi"
  output(s)
}
